# avspl1t

./: .gitignore  README.md  pyproject.toml
client/: README.md  config_example.json  main.py
client/proto/: avspl1t_pb2.py  avspl1t_pb2_grpc.py
client/tests/: test_client.py  utils.py
coordinator/: README.md  config_example.json  db.py  main.py  schema.sql  service.py
coordinator/logic/: db.py  job.py  task.py  utils.py
coordinator/proto/: avspl1t_pb2.py  avspl1t_pb2_grpc.py
coordinator/schema/: schema_postgres.sql  schema_sqlite.sql
coordinator/tests/: conftest.py  test_coordinator.py  test_edge_cases.py
docs/: architecture.md  client.md  coordinator.md  worker.md
docs/notebooks/: catherineyeh.md  junemoretz.md
proto/: avspl1t.proto
worker/: README.md  config_example.json  main.py
worker/logic/: encodeVideo.py  files.py  generateManifest.py  splitVideo.py
worker/proto/: avspl1t_pb2.py
worker/tests/: test_tasks.py  test_worker_grpc.py  utils.py
worker/tests/resources/: manifest.m3u8  segment_000.ts
